[package]
name = "vatsim-stats"
version = "0.1.0"
authors = ["Michael Kreuzer <m-git@kreuzers.org>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1", features = ["derive"]}
serde_json = "1"
ron = "0.6"
thiserror = "1"
chrono = {version = "0.4", features = ["serde"]}
walkdir = "2"
warp = "0.2"
tokio = {version = "0.2", features = ["rt-core", "macros"]}
anyhow = "1"
log = "0.4"
pretty_env_logger = "0.4"
